{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 10,
  "lineage": "46286012-66f7-4a6c-7b54-8ef56b8e516f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092b43193629811af",
            "arn": "arn:aws:ec2:us-east-2:155322023279:instance/i-037c4d672a52378c2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037c4d672a52378c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair_ohio_region",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061abe0dfa7b1f186",
            "private_dns": "ip-10-0-10-124.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c83518427664fca",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc1a04af4d52dc18",
            "tags": {
              "Name": "tag_my_ec2_01"
            },
            "tags_all": {
              "Name": "tag_my_ec2_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04987d785d9355ca4"
            ]
          },
          "dependencies": [
            "aws_subnet.my_subnet1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:155322023279:internet-gateway/igw-027f8a3a1ec7aa017",
            "id": "igw-027f8a3a1ec7aa017",
            "owner_id": "155322023279",
            "tags": {
              "Name": "tag_my_internetgateway"
            },
            "tags_all": {
              "Name": "tag_my_internetgateway"
            },
            "vpc_id": "vpc-0fc1fc2c4203c6733"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "my_aws_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-027f8a3a1ec7aa017",
            "id": "r-rtb-01e387c1bc08379721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e387c1bc0837972",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internetgateway",
            "aws_route_table.my_routetable",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:155322023279:route-table/rtb-01e387c1bc0837972",
            "id": "rtb-01e387c1bc0837972",
            "owner_id": "155322023279",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tag_my_routetable"
            },
            "tags_all": {
              "Name": "tag_my_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1fc2c4203c6733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_routetable_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0b94dbb6986d43e",
            "route_table_id": "rtb-01e387c1bc0837972",
            "subnet_id": "subnet-0bc1a04af4d52dc18"
          },
          "dependencies": [
            "aws_route_table.my_routetable",
            "aws_subnet.my_subnet1",
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:155322023279:security-group/sg-0bbffa03eb96d0ca5",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbffa03eb96d0ca5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "155322023279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tag_my_securitygroup"
            },
            "tags_all": {
              "Name": "tag_my_securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1fc2c4203c6733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:155322023279:subnet/subnet-0bc1a04af4d52dc18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc1a04af4d52dc18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155322023279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tag_my_subnet1"
            },
            "tags_all": {
              "Name": "tag_my_subnet1"
            },
            "vpc_id": "vpc-0fc1fc2c4203c6733"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:155322023279:subnet/subnet-0ef7c46c7ee727518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef7c46c7ee727518",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155322023279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tag_my_subnet2"
            },
            "tags_all": {
              "Name": "tag_my_subnet2"
            },
            "vpc_id": "vpc-0fc1fc2c4203c6733"
          },
          "dependencies": [
            "aws_vpc.my_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:155322023279:vpc/vpc-0fc1fc2c4203c6733",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05044b9a7ea45a513",
            "default_route_table_id": "rtb-0cbb19346ddf5e2f8",
            "default_security_group_id": "sg-04987d785d9355ca4",
            "dhcp_options_id": "dopt-09e94f4872b00d57f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fc1fc2c4203c6733",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbb19346ddf5e2f8",
            "owner_id": "155322023279",
            "tags": {
              "Name": "tag_my_vpc1"
            },
            "tags_all": {
              "Name": "tag_my_vpc1"
            }
          }
        }
      ]
    }
  ]
}